--- a/Management.WebAPI/appsettings.json
+++ b/Management.WebAPI/appsettings.json
@@ -38,5 +38,6 @@
     "Username": "rohithk.aspirefox@gmail.com",
     "Password": "lquu zlhn mqst ebiv"
   },
-  "FrontEndResetPasswordUrl": "https://localhost:7222/Account/ResetPassword?token="
+  "FrontEndResetPasswordUrl": "https://localhost:7222/Account/ResetPassword?token=",
+   "FilePath": "/Images"
 }
