--- a/Managment/appsettings.json
+++ b/Managment/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-TSNS501;Initial Catalog=Management;Integrated Security=true;Trusted_Connection=true; Encrypt=False;"
+    "DefaultConnection": "Data Source=ROH3;Initial Catalog=Management;Integrated Security=true;Trusted_Connection=true; Encrypt=False;"
   },
   "EmailConfiguration": {
     "From": "rohithk.aspirefox@gmail.com",
