--- a/Shared/Management.Common.csproj
+++ b/Shared/Management.Common.csproj
@@ -10,6 +10,10 @@
     <Folder Include="Shared\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="MimeKit" Version="3.2.0" />
